@@ -94,7 +94,7 @@ public class WorldEdit {
     }
 
     public static void handleWatchdog(ClassNode node, PluginPatcher.ClassRepo repo) {
-        if (node.interfaces.size() == 1 && node.interfaces.get(0).equals("com/sk89q/worldedit/extension/platform/Watchdog")
+        if (node.interfaces.size() == 1 && node.interfaces.getFirst().equals("com/sk89q/worldedit/extension/platform/Watchdog")
             && node.name.contains("SpigotWatchdog")) {
             for (MethodNode method : node.methods) {
                 if (method.name.equals("<init>")) {
